--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -103,7 +103,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.16.5
         env:
-          CIBW_ARCHS_MACOS: x86_64 arm64 universal2
+          CIBW_BUILD: cp312-win_amd64
       - name: Build sdist
         run: |
           pip install cython wheel setuptools
